[package]
name = "aoc"
version = "0.1.0"
authors = ["MarcusGrass <marcus.grass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking", "cookies"]}
dotenv = "0.15.0"
